add testing environment (robolectric, mockito, junit...)